# dough-flow

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_currency_to_users.py
backend/app/: config.py  database.py  dependencies.py  main.py  seed.py
backend/app/models/: __init__.py  account.py  budget.py  category.py  csv_mapping.py  debt.py  goal.py  transaction.py  user.py
backend/app/routers/: accounts.py  auth.py  budgets.py  categories.py  csv_import.py  debts.py  goals.py  reports.py  transactions.py
backend/app/schemas/: account.py  budget.py  category.py  csv_import.py  debt.py  goal.py  report.py  transaction.py  user.py
backend/app/services/: auth.py  budget_service.py  csv_parser.py  debt_calculator.py  report_generator.py  transaction_service.py
backend/tests/: .env.test  conftest.py  test_accounts.py  test_auth.py  test_budgets.py  test_categories.py  test_csv_import.py  test_debts.py  test_goals.py  test_reports.py  test_transactions.py
backend/tests/unit/: test_accounts.py  test_debts.py
dough_flow_api/: .dockerignore  Dockerfile  pyproject.toml
dough_flow_api/alembic/: env.py
dough_flow_api/alembic/versions/: 35d85fe0efa6_use_timezone_aware_timestamps.py  9458ccd9337c_add_debt_groups_and_debt_group_members_.py  b15427f57a02_add_retirement_account_type.py  b2c3d4e5f6a7_add_payment_and_adjustment_transaction_.py  d0c264075e13_initial_schema.py  e0f4cf9dcd41_rename_original_amount_to_principal_.py  f68c31568ad7_add_category_mapping_and_is_default_to_.py
dough_flow_api/api/: config.py  database.py  dependencies.py  helpers.py  main.py  seed.py  seed_csv_mappings.py  utils.py
dough_flow_api/api/models/: __init__.py  account.py  budget.py  category.py  csv_mapping.py  debt.py  debt_group.py  goal.py  transaction.py  user.py
dough_flow_api/api/routers/: accounts.py  auth.py  budgets.py  categories.py  csv_import.py  debt_groups.py  debts.py  goals.py  reports.py  transactions.py
dough_flow_api/api/schemas/: account.py  category.py  csv_import.py  debt.py  debt_group.py  report.py  transaction.py
dough_flow_api/api/seed/: __init__.py  csv_mappings.py  institution_data.py
dough_flow_api/api/services/: account_service.py  auth.py  budget_service.py  category_resolver.py  csv_import_service.py  csv_parser.py  debt_calculator.py  debt_group_service.py  report_generator.py  transaction_service.py  transfer_matcher.py
dough_flow_api/tests/: conftest.py
dough_flow_api/tests/unit/: test_accounts.py  test_auth.py  test_category_resolver.py  test_csv_import.py  test_csv_parser_unit.py  test_debt_calculator_unit.py  test_debt_groups.py  test_debts.py  test_goals.py  test_reports.py  (+5 more)
(+85 files in other folders)
