[tool.poetry]
name = "dough-flow-api"
version = "0.1.0"
description = "Dough Flow - Personal Finance Tracking API"
authors = ["Mevin Mathew"]
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.18"
pandas = "^2.2.0"
email-validator = "^2.3.0"
python-dateutil = "^2.9.0.post0"
greenlet = "^3.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
aiosqlite = "^0.20.0"
black = "^26.3.1"
isort = "^8.0.1"
pylint = "^4.0.5"
mypy = "^1.19.1"
bandit = "^1.9.4"
types-passlib = "^1.7.7.20260211"
pandas-stubs = "^3.0.0.260204"
types-python-dateutil = "^2.9.0.20260323"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["jose.*", "bcrypt.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pylint.main]
disable = ["C0114", "C0115", "C0116", "R0903", "E1101"]
max-line-length = 120

[tool.pylint.design]
max-args = 8
